--- a/04_Hello_Map_Quiz.html
+++ b/04_Hello_Map_Quiz.html
@@ -10,18 +10,32 @@ API Course, Lesson 1 -->
  </head>
  <body>
    <!-- TODO 1: Create a place to put the map in the HTML-->
-   <div></div>
+   <div id="map"></div>
    <script>
      // TODO: Create a map variable
-
+	 var map;
+	 	
      // TODO: Complete the following function to initialize the map
      function initMap() {
        // TODO: use a constructor to create a new map JS object. You can use the coordinates
        // we used, 40.7413549, -73.99802439999996 or your own!
+       map = new google.maps.Map(document.getElementById('map'),{
+	       center:{lat: 33.77734,lng: -118.178754 },
+	       zoom: 13
+       });
+       
+       var myhome = {lat: 33.77734,lng: -118.178754 };
+       var marker = new google.maps.Marker({
+	       position: myhome,
+	       map: map,
+	       title: 'My Home'
+       });
      }
-   </script>
+     </script>
+   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBOPzF1nsjvu2rxIG8EoHRjrcUCkhZ1OUA&v=3&callback=initMap">
    <!--TODO: Load the JS API ASYNCHRONOUSLY below.-->
-   <script>
+
    </script>
  </body>
 </html>
+AIzaSyBOPzF1nsjvu2rxIG8EoHRjrcUCkhZ1OUA
